crates/submilli-engine/src/snapshots/submilli_engine__parser__tests__snapshot_multi_call_program.snap
---
source: crates/submilli-engine/src/parser.rs
expression: ast
---
Ast {
    exprs: [
        Expr {
            kind: Identifier(
                Ident {
                    name: "f",
                    span: Span {
                        file: FileId(
                            0,
                        ),
                        start: 0,
                        end: 1,
                    },
                },
            ),
            span: Span {
                file: FileId(
                    0,
                ),
                start: 0,
                end: 1,
            },
        },
        Expr {
            kind: Call {
                callee: ExprId(
                    0,
                ),
                type_args: None,
                args: [],
            },
            span: Span {
                file: FileId(
                    0,
                ),
                start: 0,
                end: 3,
            },
        },
        Expr {
            kind: Identifier(
                Ident {
                    name: "g",
                    span: Span {
                        file: FileId(
                            0,
                        ),
                        start: 5,
                        end: 6,
                    },
                },
            ),
            span: Span {
                file: FileId(
                    0,
                ),
                start: 5,
                end: 6,
            },
        },
        Expr {
            kind: Number(
                1.0,
            ),
            span: Span {
                file: FileId(
                    0,
                ),
                start: 7,
                end: 8,
            },
        },
        Expr {
            kind: Call {
                callee: ExprId(
                    2,
                ),
                type_args: None,
                args: [
                    ExprId(
                        3,
                    ),
                ],
            },
            span: Span {
                file: FileId(
                    0,
                ),
                start: 5,
                end: 9,
            },
        },
        Expr {
            kind: Identifier(
                Ident {
                    name: "h",
                    span: Span {
                        file: FileId(
                            0,
                        ),
                        start: 11,
                        end: 12,
                    },
                },
            ),
            span: Span {
                file: FileId(
                    0,
                ),
                start: 11,
                end: 12,
            },
        },
        Expr {
            kind: Identifier(
                Ident {
                    name: "f",
                    span: Span {
                        file: FileId(
                            0,
                        ),
                        start: 13,
                        end: 14,
                    },
                },
            ),
            span: Span {
                file: FileId(
                    0,
                ),
                start: 13,
                end: 14,
            },
        },
        Expr {
            kind: Number(
                2.0,
            ),
            span: Span {
                file: FileId(
                    0,
                ),
                start: 15,
                end: 16,
            },
        },
        Expr {
            kind: Call {
                callee: ExprId(
                    6,
                ),
                type_args: None,
                args: [
                    ExprId(
                        7,
                    ),
                ],
            },
            span: Span {
                file: FileId(
                    0,
                ),
                start: 13,
                end: 17,
            },
        },
        Expr {
            kind: Number(
                3.0,
            ),
            span: Span {
                file: FileId(
                    0,
                ),
                start: 19,
                end: 20,
            },
        },
        Expr {
            kind: Call {
                callee: ExprId(
                    5,
                ),
                type_args: None,
                args: [
                    ExprId(
                        8,
                    ),
                    ExprId(
                        9,
                    ),
                ],
            },
            span: Span {
                file: FileId(
                    0,
                ),
                start: 11,
                end: 21,
            },
        },
    ],
    stmts: [
        Stmt {
            kind: Expr(
                ExprId(
                    1,
                ),
            ),
            span: Span {
                file: FileId(
                    0,
                ),
                start: 0,
                end: 4,
            },
        },
        Stmt {
            kind: Expr(
                ExprId(
                    4,
                ),
            ),
            span: Span {
                file: FileId(
                    0,
                ),
                start: 5,
                end: 10,
            },
        },
        Stmt {
            kind: Expr(
                ExprId(
                    10,
                ),
            ),
            span: Span {
                file: FileId(
                    0,
                ),
                start: 11,
                end: 22,
            },
        },
    ],
    top_level: [
        StmtId(
            0,
        ),
        StmtId(
            1,
        ),
        StmtId(
            2,
        ),
    ],
    pattern_origins: {},
    tuple_pattern_sources: {},
    parameter_bindings: {},
    for_of_pattern_bindings: {},
    for_pattern_init_bindings: {},
    exported_decls: [],
    implicit_initializers: {},
    synthetic_undefined: {},
    binding_defaults: {},
}
