crates/submilli-engine/src/snapshots/submilli_engine__parser__tests__snapshot_object_and_array_literals.snap
---
source: crates/submilli-engine/src/parser.rs
expression: ast
---
Ast {
    exprs: [
        Expr {
            kind: Number(
                1.0,
            ),
            span: Span {
                file: FileId(
                    0,
                ),
                start: 16,
                end: 17,
            },
        },
        Expr {
            kind: String(
                "hi",
            ),
            span: Span {
                file: FileId(
                    0,
                ),
                start: 22,
                end: 26,
            },
        },
        Expr {
            kind: ObjectLiteral {
                members: [
                    Field(
                        ObjectLiteralField {
                            name: Ident {
                                name: "a",
                                span: Span {
                                    file: FileId(
                                        0,
                                    ),
                                    start: 13,
                                    end: 14,
                                },
                            },
                            value: ExprId(
                                0,
                            ),
                        },
                    ),
                    Field(
                        ObjectLiteralField {
                            name: Ident {
                                name: "b",
                                span: Span {
                                    file: FileId(
                                        0,
                                    ),
                                    start: 19,
                                    end: 20,
                                },
                            },
                            value: ExprId(
                                1,
                            ),
                        },
                    ),
                ],
            },
            span: Span {
                file: FileId(
                    0,
                ),
                start: 11,
                end: 28,
            },
        },
        Expr {
            kind: ObjectLiteral {
                members: [],
            },
            span: Span {
                file: FileId(
                    0,
                ),
                start: 30,
                end: 32,
            },
        },
        Expr {
            kind: ArrayLiteral {
                elements: [
                    Value(
                        ExprId(
                            2,
                        ),
                    ),
                    Value(
                        ExprId(
                            3,
                        ),
                    ),
                ],
            },
            span: Span {
                file: FileId(
                    0,
                ),
                start: 10,
                end: 33,
            },
        },
    ],
    stmts: [
        Stmt {
            kind: Let {
                name: Ident {
                    name: "mix",
                    span: Span {
                        file: FileId(
                            0,
                        ),
                        start: 4,
                        end: 7,
                    },
                },
                ty: None,
                value: ExprId(
                    4,
                ),
                doc: None,
            },
            span: Span {
                file: FileId(
                    0,
                ),
                start: 0,
                end: 34,
            },
        },
    ],
    top_level: [
        StmtId(
            0,
        ),
    ],
    pattern_origins: {},
    tuple_pattern_sources: {},
    parameter_bindings: {},
    for_of_pattern_bindings: {},
    for_pattern_init_bindings: {},
    exported_decls: [],
    implicit_initializers: {},
    synthetic_undefined: {},
    binding_defaults: {},
}
